stoping point stuck on margin bug

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  margin: 0;
   width: 100%;
-  border: 2px solid #000;
+  height: 100vh;
 }
